@@ -446,6 +446,28 @@ int msAddLabel(mapObj *map, int layerindex, int classindex, shapeObj *shape, poi
   return(MS_SUCCESS);
 }
 
+
+/*
+** Is a label completely in the image, reserving a gutter (in pixels) inside 
+** image for no labels (effectively making image larger. The gutter can be 
+** negative in cases where a label has a buffer around it.
+*/
+static int labelInImage(int width, int height, shapeObj *lpoly, int gutter)
+{
+  int i,j;
+
+  for(i=0; i<lpoly->numlines; i++) {
+    for(j=1; j<lpoly->line[i].numpoints; j++) {
+      if(lpoly->line[i].point[j].x < gutter) return(MS_FALSE);
+      if(lpoly->line[i].point[j].x >= width-gutter) return(MS_FALSE);
+      if(lpoly->line[i].point[j].y < gutter) return(MS_FALSE);
+      if(lpoly->line[i].point[j].y >= height-gutter) return(MS_FALSE);
+    }
+  }
+
+  return(MS_TRUE);
+}
+
 /* msTestLabelCacheCollisions()
 **
 ** Compares current label against labels already drawn and markers from cache and discards it
@@ -953,26 +975,6 @@ pointObj get_metrics(pointObj *p, int position, rectObj rect, int ox, int oy, do
         msComputeBounds(poly);
     }
     return rp;
-}
-
-/*
-** is a label completely in the image (excluding label buffer)
-*/
-/* static int labelInImage(int width, int height, shapeObj *lpoly, int buffer) */
-int labelInImage(int width, int height, shapeObj *lpoly, int buffer)
-{
-  int i,j;
-
-  for(i=0; i<lpoly->numlines; i++) {
-    for(j=1; j<lpoly->line[i].numpoints; j++) {
-      if(lpoly->line[i].point[j].x < -buffer) return(MS_FALSE);
-      if(lpoly->line[i].point[j].x >= width+buffer) return(MS_FALSE);
-      if(lpoly->line[i].point[j].y < -buffer) return(MS_FALSE);
-      if(lpoly->line[i].point[j].y >= height+buffer) return(MS_FALSE);
-    }
-  }
-
-  return(MS_TRUE);
 }
 
 /*
